<resources>
    <string name="app_name">Kithara Scraper</string>
    <string name="header_title">Kithara Scraper</string>
    <string name="version_label">Version %1$s</string>
    <string name="splash_title">Kithara Lyrics &amp; Chords</string>
    <string name="splash_subtitle">Scrape | Copy | Save</string>
    <string name="share_file">📤 Share file</string>
    <string name="scrape_button">Scrape</string>
    <string name="download_button">Save File</string>
    <string name="back_button">Back</string>
    <string name="reload_button">Reload</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_title">Unknown Song Title</string>
    <string name="status_starting">Starting&#8230;</string>
    <string name="status_loading">Loading page&#8230;</string>
    <string name="status_ready">Ready. Select a song and press Scrape.</string>
    <string name="status_scraped">Song scraped and copied to clipboard.</string>
    <string name="status_offline">Offline. Connect to the internet and press Reload.</string>
    <string name="status_page_error">Page could not be loaded. Press Reload.</string>
    <string name="status_http_error">Server returned HTTP error %1$d. Press Reload.</string>
    <string name="status_blocked_navigation">Navigation outside the allowed sites was blocked.</string>
    <string name="status_saved">Saved to Downloads/Chords: %1$s</string>
    <string name="status_no_song">No song selected</string>
    <string name="status_artist_empty">Artist: -</string>
    <string name="status_key_empty">Key: -</string>
    <string name="status_artist">Artist: %1$s</string>
    <string name="status_key">Key: %1$s</string>
    <string name="status_unknown">Unknown</string>
    <string name="update_available_title">Update available</string>
    <string name="update_available_message">Version %1$s is available. Download it now?</string>
    <string name="update_cancel">Cancel</string>
    <string name="update_download">Download</string>
    <string name="update_download_title">Kithara Scraper %1$s</string>
    <string name="update_download_description">Downloading the latest APK</string>
    <string name="checking_for_updates">Checking GitHub for updates&#8230;</string>
    <string name="version_up_to_date">Your version is up to date!</string>
</resources>
